# Easy_Manipulator_Improved

./: .gitignore  README.md
.github/workflows/: build.yml  ros_build.yml
assets/end_effectors/onrobot_airpick4/onrobot_airpick4_description/launch/: display.launch.py
assets/end_effectors/robotiq_85_gripper/robotiq_85_description/urdf/: robotiq_85_kinova_coupler.urdf.xacro
assets/end_effectors/robotiq_85_gripper/robotiq_85_moveit_config/config/: robotiq_85_gripper.srdf  robotiq_85_gripper.srdf.xacro
assets/environment/realsense2_description/: CHANGELOG.rst  CMakeLists.txt
assets/environment/realsense2_description/tests/: test_xacro.py
assets/environment/realsense2_description/urdf/: _d415.urdf.xacro  _d435.urdf.xacro  _r410.urdf.xacro  _r430.urdf.xacro  test_d415_camera.urdf.xacro  test_d435_camera.urdf.xacro  test_d435_multiple_cameras.urdf.xacro  test_d435i_camera.urdf.xacro  test_r410_camera.urdf.xacro  test_r430_camera.urdf.xacro
assets/environment/table_description/: CMakeLists.txt
assets/environment/workbench_description/: CMakeLists.txt  package.xml
assets/environment/workbench_description/urdf/: workbench.urdf.xacro
assets/robots/panda_robot/panda_description/urdf/: panda.urdf  panda.urdf.xacro
assets/robots/universal_robot/ur10_moveit_config/config/: ur10.ros2_control.xacro
assets/robots/universal_robot/ur3_moveit_config/config/: ur3.ros2_control.xacro
assets/robots/universal_robot/ur5_moveit_config/config/: ur5.ros2_control.xacro
assets/robots/universal_robot/ur_description/: CHANGELOG.rst
easy_manipulation_deployment/: CHANGELOG.rst
easy_manipulation_deployment/emd_demo_nodes/run_dynamic_safety/: CMakeLists.txt  package.xml
easy_manipulation_deployment/emd_demo_nodes/run_dynamic_safety/launch/: run_moveit_cpp.launch.py
easy_manipulation_deployment/emd_demo_nodes/run_grasp_execution/: CMakeLists.txt
easy_manipulation_deployment/emd_demo_nodes/run_grasp_execution/launch/: grasp_execution.launch.py
easy_manipulation_deployment/emd_demo_nodes/run_grasp_execution/src/: fake_grasp_pose_publisher.cpp
easy_manipulation_deployment/emd_demo_nodes/run_waypoint_execution/: CMakeLists.txt
easy_manipulation_deployment/emd_demo_nodes/run_waypoint_execution/launch/: grasp_execution.launch.py
easy_manipulation_deployment/emd_demo_nodes/run_waypoint_execution/src/: fake_grasp_pose_publisher.cpp
easy_manipulation_deployment/emd_dynamic_safety/: CMakeLists.txt  package.xml
easy_manipulation_deployment/emd_dynamic_safety/include/emd/: utils.hpp
easy_manipulation_deployment/emd_dynamic_safety/include/emd/dynamic_safety/: dynamic_safety.hpp  dynamic_safety_trajectory_controller.hpp  next_point_publisher.hpp
easy_manipulation_deployment/emd_dynamic_safety/src/: collision_checker.cpp  dynamic_safety.cpp  dynamic_safety_trajectory_controller.cpp  next_point_publisher.cpp  visualizer.cpp
easy_manipulation_deployment/emd_dynamic_safety/src/moveit/: collision_checker_moveit.cpp  replanner_moveit.cpp
easy_manipulation_deployment/emd_dynamic_safety/src/tesseract/: replanner_tesseract.cpp
easy_manipulation_deployment/emd_dynamic_safety/test/: test_collision_checking.cpp  test_hardware.cpp  test_hardware.hpp
easy_manipulation_deployment/emd_grasp_execution/: CMakeLists.txt  package.xml
easy_manipulation_deployment/emd_grasp_execution/include/emd/grasp_execution/: context.hpp  grasp_execution.hpp  utils.hpp
easy_manipulation_deployment/emd_grasp_execution/include/emd/grasp_execution/moveit2/: executor.hpp  moveit_cpp_if.hpp
easy_manipulation_deployment/emd_grasp_execution/include/emd/grasp_execution/moveit2/executor/: default_executor.hpp
easy_manipulation_deployment/emd_grasp_execution/src/: context.cpp  grasp_execution.cpp
easy_manipulation_deployment/emd_grasp_execution/src/action/: default_planning_action.cpp
easy_manipulation_deployment/emd_grasp_execution/src/moveit2/: moveit_cpp_if.cpp
easy_manipulation_deployment/emd_grasp_execution/src/moveit2/executor/: default_executor.cpp
easy_manipulation_deployment/emd_grasp_execution/test/unit/: CMakeLists.txt
easy_manipulation_deployment/emd_grasp_planner/: CMakeLists.txt  package.xml
easy_manipulation_deployment/emd_grasp_planner/include/emd/common/: conversions.hpp  math_functions.hpp
easy_manipulation_deployment/emd_grasp_planner/src/: grasp_object.cpp  grasp_scene.cpp
easy_manipulation_deployment/emd_grasp_planner/src/common/: math_functions.cpp
easy_manipulation_deployment/emd_grasp_planner/test/: grasp_object_test.cpp  math_functions_test.cpp  suction_gripper_test.cpp
easy_manipulation_deployment/emd_waypoint_execution/: CMakeLists.txt  package.xml
easy_manipulation_deployment/emd_waypoint_execution/src/: waypoint_parser.cpp
easy_manipulation_deployment/emd_waypoint_execution/test/: CMakeLists.txt  test_waypoint_parser.cpp
easy_manipulation_deployment/workcell_builder/examples/ros1/: package_example.xml
easy_manipulation_deployment/workcell_builder/examples/ros2/: CMakeLists_example.txt  CMakeLists_object_example.txt  test_to_urdf.py
easy_manipulation_deployment/workcell_builder/workcell_builder/: CMakeLists.txt  package.xml
easy_manipulation_deployment/workcell_builder/workcell_builder/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  scene_select.cpp  scene_select.h
easy_manipulation_deployment/workcell_builder/workcell_builder/include/: file_functions.h  object_package_parser.h
emd_msgs/: CMakeLists.txt  package.xml
scenes/suction_test/: CMakeLists.txt  package.xml
scenes/suction_test/launch/: demo.launch.py
scenes/ur5_2f_test/: CMakeLists.txt  package.xml
scenes/ur5_2f_test/launch/: demo.launch.py
scenes/ur5_2f_test/urdf/: arm_hand.srdf.xacro  scene.urdf.xacro
scenes/ur5_3f_test/: CMakeLists.txt  package.xml
scenes/ur5_3f_test/launch/: demo.launch.py
scenes/ur5_3f_test/urdf/: scene.urdf.xacro
scenes/ur5_airpick4_test/: CMakeLists.txt  package.xml
scenes/ur5_airpick4_test/launch/: demo.launch.py
scenes/ur5_airpick4_test/urdf/: scene.urdf.xacro
(+9 files in other folders)
