<package format="3">
  <name>workbench_description</name>
  <version>0.0.1</version>
  <description>Minimal workbench for EMD demos.</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
</package>
